fix(ktl-3945): proper font on mobile, use next link

--- a/blocks/compose-multiplatform/platforms-block/platform-icon.module.css
+++ b/blocks/compose-multiplatform/platforms-block/platform-icon.module.css
@@ -5,6 +5,10 @@
   flex-direction: column;
   align-items: center;
   gap: 24px;
+
+  @media (--ktl-ms-down) {
+    gap: 14px;
+  }
 }
 
 .icon {
@@ -48,6 +52,20 @@
       height: 48px;
       width: 48px;
     }
+  }
+}
+
+.title {
+  @media (--ktl-ms-down) {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+.text {
+  @media (--ktl-ms-down) {
+    font-size: 13px;
+    line-height: 20px;
   }
 }
 
